config/local-setup/workloads/apicast.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: apicast-staging-wildcard-cert
spec:
  dnsNames: ["*.REPLACE"]
  issuerRef:
    kind: ClusterIssuer
    name: selfsigned-cluster-issuer
  secretName: apicast-staging-wildcard-cert

---
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: apicast-production-wildcard-cert
spec:
  dnsNames: ["*.REPLACE"]
  issuerRef:
    kind: ClusterIssuer
    name: selfsigned-cluster-issuer
  secretName: apicast-production-wildcard-cert

---
apiVersion: saas.3scale.net/v1alpha1
kind: Apicast
metadata:
  name: apicast
spec:
  production:
    image:
      name: REPLACE
      tag: REPLACE
      pullSecretName: pull-secrets
      pullPolicy: Always
    config:
      configurationCache: 300
      threescalePortalEndpoint: "http://mapping-service-http-svc/config"
    hpa: {}
    pdb: {}
    resources: {}
    replicas: 1
    publishingStrategies:
      endpoints:
        - marin3rSidecar:
            dynamicConfigs:
              gateway_cluster_production:
                cluster:
                  host: 127.0.0.1
                  isHttp2: false
                  port: 8080
                generatorVersion: v1
              http:
                generatorVersion: v1
                listenerHttp:
                  allowHeadersWithUnderscores: true
                  enableHttp2: false
                  port: 38080
                  proxyProtocol: false
                  routeConfigName: router
              https:
                generatorVersion: v1
                listenerHttp:
                  allowHeadersWithUnderscores: true
                  certificateSecretName: apicast-production-wildcard-cert
                  enableHttp2: false
                  port: 38443
                  proxyProtocol: false
                  routeConfigName: router
              router:
                generatorVersion: v1
                routeConfiguration:
                  virtualHosts:
                    - domains:
                        - "*"
                      name: gateway
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: gateway_cluster_production
                            timeout: 30s
            elasticLoadBalancerConfig:
              proxyProtocol: false
            envoyImage: REPLACE
            externalDnsHostnames: ["*.REPLACE"]
            ports:
              - name: gateway-http
                port: 38080
              - name: gateway-https
                port: 38443
              - name: envoy-metrics
                port: 9901
            servicePorts:
              - name: gateway-http
                port: 80
                protocol: TCP
                targetPort: gateway-http
              - name: gateway-https
                port: 443
                protocol: TCP
                targetPort: gateway-https
            serviceType: ELB
            shtdnmgrExtraLifecycleHooks:
              - apicast
            shtdnmgrPort: 8091
          name: Gateway
          strategy: Marin3rSidecar
  staging:
    image:
      name: REPLACE
      tag: REPLACE
      pullSecretName: pull-secrets
      pullPolicy: Always
    config:
      configurationCache: 60
      threescalePortalEndpoint: "http://mapping-service-http-svc/config"
    hpa: {}
    pdb: {}
    resources: {}
    replicas: 1
    publishingStrategies:
      endpoints:
        - name: Gateway
          strategy: Marin3rSidecar
          marin3rSidecar:
            dynamicConfigs:
              gateway_cluster_staging:
                cluster:
                  host: 127.0.0.1
                  isHttp2: false
                  port: 8080
                generatorVersion: v1
              http:
                generatorVersion: v1
                listenerHttp:
                  allowHeadersWithUnderscores: true
                  enableHttp2: false
                  port: 38080
                  proxyProtocol: false
                  routeConfigName: router
              https:
                generatorVersion: v1
                listenerHttp:
                  allowHeadersWithUnderscores: true
                  certificateSecretName: apicast-staging-wildcard-cert
                  enableHttp2: false
                  port: 38443
                  proxyProtocol: false
                  routeConfigName: router
              mgmt_cluster:
                cluster:
                  host: 127.0.0.1
                  isHttp2: false
                  port: 8090
                generatorVersion: v1
              router:
                generatorVersion: v1
                routeConfiguration:
                  virtualHosts:
                    - domains:
                        - "*"
                      name: gateway
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: gateway_cluster_staging
                            timeout: 30s
            elasticLoadBalancerConfig:
              proxyProtocol: false
            envoyImage: REPLACE
            externalDnsHostnames: ["*.REPLACE"]
            ports:
              - name: gateway-http
                port: 38080
              - name: gateway-https
                port: 38443
              - name: envoy-metrics
                port: 9901
            resources: {}
            servicePorts:
              - name: gateway-http
                port: 80
                protocol: TCP
                targetPort: gateway-http
              - name: gateway-https
                port: 443
                protocol: TCP
                targetPort: gateway-https
            serviceType: ELB
            shtdnmgrExtraLifecycleHooks:
              - apicast
            shtdnmgrPort: 8091
